--- a/app/src/main/res/drawable/tab_indicator_default.xml
+++ b/app/src/main/res/drawable/tab_indicator_default.xml
@@ -3,10 +3,13 @@
     android:innerRadius="0dp"
     android:shape="rectangle"
     android:thickness="@dimen/_1dp"
+    android:padding="5dp"
     android:useLevel="false"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@android:color/darker_gray" />
+        android:color="@android:color/darker_gray"
+        android:padding="5dp"
+        />
     <corners
         android:radius="@dimen/_100dp"
         />
