--- a/app/src/main/res/drawable/tab_indicator_selected.xml
+++ b/app/src/main/res/drawable/tab_indicator_selected.xml
@@ -3,10 +3,12 @@
     android:innerRadius="0dp"
     android:shape="rectangle"
     android:thickness="@dimen/_1dp"
+    android:padding="5dp"
     android:useLevel="false"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="@color/app_pink" />
+        android:color="@color/app_pink"
+        android:padding="5dp"/>
     <corners
         android:radius="@dimen/_100dp"
         />
