--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -75,12 +75,13 @@
                     android:layout_height="@dimen/_10dp"
                     android:layout_marginStart="@dimen/_20dp"
                     android:layout_marginTop="@dimen/_30dp"
-                    android:padding="@dimen/_1dp"
+                    android:padding="@dimen/_2dp"
                     android:background="@android:color/transparent"
                     app:tabBackground="@drawable/tab_selector"
                     app:tabIndicatorHeight="@dimen/_0dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/card_title"
                     app:layout_constraintWidth_percent="0.3"
                     app:selectedDotColor="@android:color/holo_red_dark"/>
 
@@ -89,18 +90,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_20dp"
-                    android:layout_marginTop="@dimen/_10dp"
                     android:fontFamily="@font/poppins_bold"
                     android:text="@string/mindfullness"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_25sp"
+                    app:layout_constraintVertical_bias="0.1"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tDots" />
+                    app:layout_constraintTop_toBottomOf="@+id/tDots"
+                    app:layout_constraintBottom_toTopOf="@+id/card_description"/>
 
                 <TextView
                     android:id="@+id/card_description"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/_100dp"
                     android:layout_marginStart="@dimen/_20dp"
                     android:layout_marginEnd="@dimen/_20dp"
                     android:layout_marginTop="@dimen/_10dp"
@@ -109,7 +111,8 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/_15sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/card_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/card_title"
+                    app:layout_constraintBottom_toTopOf="@+id/btnGetStarted"/>
 
 
                 <com.google.android.material.button.MaterialButton
@@ -127,6 +130,7 @@
                     android:textSize="@dimen/_18sp"
                     android:theme="@style/MyMaterialButtonStyle"
                     app:backgroundTint="@null"
+                    app:layout_constraintTop_toBottomOf="@+id/card_description"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
