--- a/app/src/main/res/layout/fragment_meditate.xml
+++ b/app/src/main/res/layout/fragment_meditate.xml
@@ -136,6 +136,7 @@
             android:orientation="horizontal"
             android:paddingStart="@dimen/_8dp"
             android:paddingEnd="@dimen/_10dp"
+            android:paddingBottom="@dimen/_100dp"
             app:layout_constraintTop_toBottomOf="@+id/quick_n_easy"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
