--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.MindfullnessApp" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.MindfullnessApp" parent="Theme.Material3.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/accent</item>
         <item name="colorPrimaryVariant">@color/accent</item>
@@ -19,7 +19,7 @@
         <item name="cornerSize">50%</item>
     </style>
 
-    <style name="Theme.MindfullnessApp2" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Theme.MindfullnessApp2" parent="Theme.Material3.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/accent</item>
         <item name="colorPrimaryVariant">@color/accent</item>
