--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,6 +11,231 @@
         android:layout_height="match_parent"
         android:background="@color/accent">
 
+        <TextView
+            android:id="@+id/profile_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_30dp"
+            android:text="@string/profile"
+            android:layout_marginStart="@dimen/_20dp"
+            android:textSize="@dimen/_22sp"
+            android:fontFamily="@font/poppins_bold"
+            android:textColor="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/profile_card"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_130dp"
+            android:layout_margin="@dimen/_20dp"
+            app:cardBackgroundColor="@color/accent_lighter"
+            app:layout_constraintTop_toBottomOf="@+id/profile_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/profile_pic"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_0dp"
+                    android:layout_marginStart="@dimen/_15dp"
+                    android:src="@drawable/man"
+                    app:layout_constraintDimensionRatio="0.99999"
+                    app:layout_constraintWidth_percent="0.23"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    />
+
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:text="@string/john_doe"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_20sp"
+                    app:layout_constraintTop_toTopOf="@+id/profile_pic"
+                    app:layout_constraintStart_toEndOf="@+id/profile_pic"/>
+
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/_16sp"
+                    android:text="@string/doe_email"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/username"
+                    app:layout_constraintStart_toStartOf="@+id/username"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/quick_actions_card"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_170dp"
+            android:layout_margin="@dimen/_20dp"
+            app:cardBackgroundColor="@color/accent_lighter"
+            app:layout_constraintTop_toBottomOf="@+id/profile_card">
+            
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            
+            <ImageView
+                android:id="@+id/edit_profile"
+                android:layout_width="@dimen/_0dp"
+                android:layout_height="@dimen/_0dp"
+                android:src="@drawable/user"
+                android:layout_marginTop="@dimen/_20dp"
+                android:layout_marginStart="@dimen/_20dp"
+                app:layout_constraintDimensionRatio="0.99999"
+                app:layout_constraintWidth_percent="0.08"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/edit_profile_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/edit_profile"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="@dimen/_50dp"
+                    app:layout_constraintStart_toEndOf="@+id/edit_profile"
+                    app:layout_constraintTop_toTopOf="@+id/edit_profile"
+                    app:layout_constraintBottom_toBottomOf="@+id/edit_profile"/>
+
+                <ImageView
+                    android:id="@+id/reset_password"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_0dp"
+                    android:src="@drawable/password"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    app:layout_constraintDimensionRatio="0.99999"
+                    app:layout_constraintWidth_percent="0.08"
+                    app:layout_constraintTop_toBottomOf="@+id/edit_profile"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/reset_password_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/reset_password"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="@dimen/_50dp"
+                    app:layout_constraintStart_toEndOf="@+id/reset_password"
+                    app:layout_constraintTop_toTopOf="@+id/reset_password"
+                    app:layout_constraintBottom_toBottomOf="@+id/reset_password"/>
+
+                <ImageView
+                    android:id="@+id/favorites"
+                    android:layout_width="@dimen/_0dp"
+                    android:layout_height="@dimen/_0dp"
+                    android:src="@drawable/heart"
+                    android:layout_marginTop="@dimen/_22dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    app:layout_constraintDimensionRatio="0.99999"
+                    app:layout_constraintWidth_percent="0.08"
+                    app:layout_constraintTop_toBottomOf="@+id/reset_password"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/favorites_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/favorites"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="@dimen/_50dp"
+                    app:layout_constraintStart_toEndOf="@+id/favorites"
+                    app:layout_constraintTop_toTopOf="@+id/favorites"
+                    app:layout_constraintBottom_toBottomOf="@+id/favorites"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/help_center_card"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_160dp"
+            android:layout_margin="@dimen/_20dp"
+            app:cardBackgroundColor="@color/accent_lighter"
+            app:layout_constraintTop_toBottomOf="@+id/quick_actions_card">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/card_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_20dp"
+                    android:layout_marginStart="@dimen/_20dp"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_16sp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:text="@string/help_center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/terms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Terms_n_conditions"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="@dimen/_10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/card_title"
+                    app:layout_constraintStart_toStartOf="@+id/card_title"
+                    />
+
+                <TextView
+                    android:id="@+id/policy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/privacy_policy"
+                    android:textColor="@color/white"
+                    android:layout_marginTop="@dimen/_10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/terms"
+                    app:layout_constraintStart_toStartOf="@+id/card_title"/>
+
+                <TextView
+                    android:id="@+id/faq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_10dp"
+                    android:text="@string/faq"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/policy"
+                    app:layout_constraintStart_toStartOf="@+id/card_title"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_40dp"
+            android:layout_marginStart="@dimen/_2dp"
+            android:layout_marginBottom="@dimen/_70dp"
+            android:text="@string/log_out"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_20sp"
+            app:layout_constraintTop_toBottomOf="@+id/help_center_card"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/help_center_card"
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
