--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,4 +41,6 @@
     <dimen name="_25dp">25dp</dimen>
     <dimen name="_170dp">170dp</dimen>
     <dimen name="_160dp">160dp</dimen>
+    <dimen name="_22sp">22sp</dimen>
+    <dimen name="_22dp">22dp</dimen>
 </resources>
