--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="accent">#0E133C</color>
     <color name="accent_lighter">#31317A</color>
-    <color name="app_pink">#EB7FDC</color>
+    <color name="app_pink">#d4f1f4</color>
 </resources>
