--- a/app/src/main/res/drawable/linear_pink.xml
+++ b/app/src/main/res/drawable/linear_pink.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#EB7FDC"
-        android:startColor="#FFBF00" />
+        android:endColor="#189ab4"
+        android:startColor="#d4f1f4" />
 
     <corners android:radius="@dimen/_50dp"/>
 </shape>
