--- a/app/src/main/res/layout/daily_exercises_layout.xml
+++ b/app/src/main/res/layout/daily_exercises_layout.xml
@@ -6,7 +6,7 @@
     android:paddingEnd="@dimen/_10dp"
     android:background="@color/accent">
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.cardview.widget.CardView
         android:layout_width="@dimen/_200dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_15dp"
@@ -44,7 +44,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/top_image" />
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/course"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_40dp"
@@ -80,9 +80,9 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
-            <com.google.android.material.card.MaterialCardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/duration"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_40dp"
@@ -109,7 +109,7 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </com.google.android.material.card.MaterialCardView>
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/description_text"
@@ -124,6 +124,6 @@
                 app:layout_constraintTop_toBottomOf="@+id/course" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
