--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/challeging_times"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_160dp"
@@ -116,7 +116,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/title" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/recommended_list"
@@ -143,7 +143,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/recommended_item"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_160dp"
@@ -191,7 +191,7 @@
                             app:layout_constraintStart_toEndOf="@id/recommended_image"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <com.google.android.material.card.MaterialCardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/course"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -227,9 +227,9 @@
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
-                        </com.google.android.material.card.MaterialCardView>
+                        </androidx.cardview.widget.CardView>
 
-                        <com.google.android.material.card.MaterialCardView
+                        <androidx.cardview.widget.CardView
                             android:id="@+id/duration"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -257,7 +257,7 @@
 
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
-                        </com.google.android.material.card.MaterialCardView>
+                        </androidx.cardview.widget.CardView>
 
                         <TextView
                             android:id="@+id/recommended_description"
@@ -272,7 +272,7 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
