--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -49,7 +49,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/app_title" />
 
-        <com.google.android.material.card.MaterialCardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/onboard_card"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_0dp"
@@ -122,7 +122,7 @@
                     android:layout_marginStart="@dimen/_20dp"
                     android:layout_marginEnd="@dimen/_20dp"
                     android:layout_marginBottom="@dimen/_20dp"
-                    android:background="@drawable/linear_pink"
+                    android:background="@drawable/linear_green"
                     android:text="@string/next"
                     android:textAlignment="center"
                     android:textAllCaps="false"
@@ -136,7 +136,7 @@
                     app:layout_constraintStart_toStartOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </com.google.android.material.card.MaterialCardView>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
