--- a/app/src/main/res/layout/fragment_options_selection.xml
+++ b/app/src/main/res/layout/fragment_options_selection.xml
@@ -387,7 +387,7 @@
                     android:layout_marginEnd="@dimen/_20dp"
                     android:layout_marginTop="@dimen/_20dp"
                     android:layout_marginBottom="@dimen/_20dp"
-                    android:background="@drawable/linear_pink"
+                    android:background="@drawable/linear_green"
                     android:text="@string/next"
                     android:textAlignment="center"
                     android:textAllCaps="false"
