--- a/app/src/main/res/layout/fragment_options_suggestion.xml
+++ b/app/src/main/res/layout/fragment_options_suggestion.xml
@@ -88,7 +88,7 @@
             android:layout_marginStart="@dimen/_20dp"
             android:layout_marginEnd="@dimen/_20dp"
             android:layout_marginBottom="@dimen/_20dp"
-            android:background="@drawable/linear_pink"
+            android:background="@drawable/linear_green"
             android:text="@string/maybe_later"
             android:textAlignment="center"
             android:textAllCaps="false"
