--- a/app/src/main/res/layout/meditation_item_layout.xml
+++ b/app/src/main/res/layout/meditation_item_layout.xml
@@ -8,7 +8,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<com.google.android.material.card.MaterialCardView
+<androidx.cardview.widget.CardView
     android:id="@+id/onboard_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -123,6 +123,6 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
