--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,4 +43,5 @@
     <dimen name="_160dp">160dp</dimen>
     <dimen name="_22sp">22sp</dimen>
     <dimen name="_22dp">22dp</dimen>
+    <dimen name="_60dp">60dp</dimen>
 </resources>
